# tensors-to-consciousness

./: .dockerignore  .gitignore  .pre-commit-config.yaml  0_computational_primitives.py  1_automatic_differentiation.py  2_optimization_theory.py  3_neural_theory.py  4_advanced_theory.py  5_research_frontiers.py  6_theoretical_limits.py  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  _run.py  _run_universal.py  docker-compose.yml  explorer.py  inputs.example.json  main.py  mise.toml  pyproject.toml  run.py  setup.py  setup_framework.py  t2c.py  test.py  test_backend_setup.py  test_mlx_setup.py  validate.py
.githooks/: commit-msg  pre-commit  pre-push
.github/: CODEOWNERS  pull_request_template.md
algos/: catalog.py  contracts.py  definitions.py  registry.py  transforms.json
app/: explorer.py
crates/accel/: Cargo.toml
crates/accel/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/explorer/: Cargo.toml
crates/explorer/src/: cargo_main.rs  main.rs  ops.rs  runtime.rs  shinkei.rs  tui.rs
crates/explorer/tests/: repo_contracts.rs
docs/: README.md  cli.md  frameworks.md  transform-playbook.md  tui.md
examples/: README.md  inputs.example.json  inputs.framework_matrix.json  inputs.noise_storm.json  inputs.spectral_sweep.json  inputs.stability_focus.json
frameworks/: engine.py
rust_core/: Cargo.toml
rust_core/src/: lib.rs
rust_explorer/: Cargo.toml
tests/: README.md  __init__.py  __main__.py  test_cli_operations.py  test_common_viz.py  test_engine_contract.py  test_framework_engine_matrix.py  test_input_controls.py  test_operations_integration.py
tools/: __init__.py  accel.py  build_accel.sh  build_core.sh  build_rust_core.sh  common_viz.py  core.py  diagnostics.py  engine_rpc.py  generate_catalog_docs.py  generate_render_assets.py  generate_viz_assets.py  git_policy.py  headless_capture.py  input_controls.py  install_githooks.py  playground.py  pre_push_gate.py  runtime.py  rust_core.py  scaffold_algo.py  setup.py  setup_contributor.py  shinkei.py  submit_pr.py  tui.py  validate.py  viz_terminal.py
transforms/: catalog.py  contracts.py  (+2 more)
(+173 files in other folders)
