[package]
name = "ttc-rust-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust compute/render core for tensors-to-consciousness"

[lib]
name = "ttc_rust_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module"] }
numpy = "0.27"
