[package]
name = "explorer-accel"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Optional accelerated kernels for explorer (compute/render helpers)."

[lib]
name = "explorer_accel"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module"] }
numpy = "0.27"
