[package]
name = "core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Optional accelerated kernels for explorer (compute/render helpers)."

[lib]
# Python extension module name is defined in `crates/core/src/lib.rs` (`#[pymodule] core`).
name = "core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module"] }
numpy = "0.27"
