[package]
name = "explorer"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
ctrlc = "3.4"
hex = "0.4"
ratatui = "0.29"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"

[[bin]]
name = "explorer"
path = "src/main.rs"

[[bin]]
# Cargo subcommand plugin: `cargo explorer ...`
name = "cargo-explorer"
path = "src/cargo_main.rs"
